tests/neg/NoneMatch.scala
object Test {

  None match {
    case Some(0) => ??? // error: unreachable
  }

}
